# libplugin

./: .gitignore  Doxyfile  README.md  meson.build  meson_options.txt  spec.md
build-config/: meson.build
build-config/minizip-ng/: meson.build
build-config/openssl/: meson.build
build-config/yaml-cpp/: meson.build
docs/: index.html
docs/html/: _f_o_u_r_d_s_t-_c_l_i_8md.html  annotated.html  annotated_dup.js  bundle_8cpp.html  bundle_8h.html  bundle_8h.js  classes.html  classfourdst_1_1crypt_1_1_public_key-members.html  classfourdst_1_1crypt_1_1_public_key.html  classfourdst_1_1crypt_1_1_public_key.js  classfourdst_1_1plugin_1_1_i_plugin-members.html  classfourdst_1_1plugin_1_1_i_plugin.html  classfourdst_1_1plugin_1_1_i_plugin.js  classfourdst_1_1plugin_1_1_i_plugin_base-members.html  classfourdst_1_1plugin_1_1_i_plugin_base.html  classfourdst_1_1plugin_1_1_i_plugin_base.js  classfourdst_1_1plugin_1_1_plugin_base-members.html  classfourdst_1_1plugin_1_1_plugin_base.html  classfourdst_1_1plugin_1_1_plugin_base.js  classfourdst_1_1plugin_1_1bundle_1_1_plugin_bundle-members.html  classfourdst_1_1plugin_1_1bundle_1_1_plugin_bundle.html  classfourdst_1_1plugin_1_1bundle_1_1_plugin_bundle.js  classfourdst_1_1plugin_1_1bundle_1_1utils_1_1_temporary_directory-members.html  classfourdst_1_1plugin_1_1bundle_1_1utils_1_1_temporary_directory.html  classfourdst_1_1plugin_1_1bundle_1_1utils_1_1_temporary_directory.js  classfourdst_1_1plugin_1_1exception_1_1_plugin_error-members.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_error.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_error.js  classfourdst_1_1plugin_1_1exception_1_1_plugin_load_error-members.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_load_error.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_load_error.js  classfourdst_1_1plugin_1_1exception_1_1_plugin_name_collision_error-members.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_name_collision_error.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_name_collision_error.js  classfourdst_1_1plugin_1_1exception_1_1_plugin_not_loaded_error-members.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_not_loaded_error.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_not_loaded_error.js  classfourdst_1_1plugin_1_1exception_1_1_plugin_symbol_error-members.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_symbol_error.html  classfourdst_1_1plugin_1_1exception_1_1_plugin_symbol_error.js  (+136 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_4.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  (+29 more)
docs/static/: FOURDST-CLI.md  mainpage.md
examples/: FOURDST-CLI.md  README.md  build_all.sh
examples/01-simple-plugin/: README.md  meson.build
examples/01-simple-plugin/include/: greeter_interface.h
examples/01-simple-plugin/src/: simple_greeter.cpp
examples/02-simple-host/: README.md  meson.build
examples/02-simple-host/include/: greeter_interface.h
examples/02-simple-host/src/: main.cpp
examples/03-math-plugins/: README.md  meson.build
examples/03-math-plugins/include/: math_interfaces.h
examples/03-math-plugins/plugins/: basic_math.cpp  log_math.cpp  trig_math.cpp
examples/03-math-plugins/src/: math_calculator.cpp
examples/04-data-processors/: README.md  meson.build  test.sh
examples/04-data-processors/include/: data_interfaces.h
examples/04-data-processors/processors/: moving_average.cpp  noise_filter.cpp  scale_transform.cpp
examples/04-data-processors/src/: data_pipeline.cpp
examples/05-plugin-bundle/: README.md  meson.build
examples/05-plugin-bundle/assets/: eboudreaux.pub.pem  example.fbundle
examples/05-plugin-bundle/include/: interface.h
examples/05-plugin-bundle/src/: main.cpp
src/: meson.build
src/include/fourdst/crypt/: crypt_verification.h  openSSL_utils.h  public_key.h
src/include/fourdst/plugin/: iplugin.h  plugin.h
src/include/fourdst/plugin/bundle/: bundle.h  utils.h
src/include/fourdst/plugin/exception/: exceptions.h
src/include/fourdst/plugin/factory/: plugin_factory.h
src/include/fourdst/plugin/manager/: plugin_manager.h
src/include/fourdst/plugin/templates/: functor.h
src/include/fourdst/plugin/utils/: plugin_utils.h
src/lib/bundle/: bundle.cpp  utils.cpp
src/lib/crypt/: crypt_verification.cpp  public_key.cpp  sha256.cpp
src/lib/manager/: plugin_manager.cpp
subprojects/: minizip-ng.wrap  yaml-cpp.wrap
subprojects/packagefiles/yaml-cpp/: addCSTDINTToEmitterUtils.patch  disableShadowWarnings.patch
tests/: meson.build  test_spec.cpp
tests/mocks/: functor_plugin.cpp  mock_interfaces.h  no_factory_plugin.cpp  other_plugin.cpp  valid_plugin.cpp
tests/sandbox/: main.cpp
