option('pkg-config', type: 'boolean', value: true, description: 'generate pkg-config file for GridFire (fourdst_plugin.pc)')
option('build-tests', type: 'boolean', value: true, description: 'generate tests for GridFire')
option('python-wheel', type: 'boolean', value: false, description: 'configure all options for building a Python wheel')